# Quant-Engine

./: CMakeLists.txt  README.md
examples/strategies/: market_maker_example.cpp  stat_arbitrage_example.cpp  trend_follower_example.cpp
include/algorithm/: backtest_engine.hpp  base_strategy.hpp  strategy_interface.hpp  strategy_manager.hpp  trading_engine.hpp
include/algorithm/strategies/: market_maker.hpp  stat_arbitrage.hpp  trend_follower.hpp
include/common/: config.hpp  json_utils.hpp  logger.hpp  ring_buffer.hpp  types.hpp
include/exchange/: base_exchange.hpp  binance_exchange.hpp  exchange_interface.hpp  http_client.hpp  websocket_client.hpp
include/execution/: event_processor.hpp  event_processor_impl.hpp  execution_engine.hpp  order_router.hpp
include/model/: compute_engine.hpp  cuda_engine.hpp  kernels.hpp  opencl_engine.hpp
include/risk/: risk_manager.hpp
src/: CMakeLists.txt
src/exchange/: base_exchange.cpp  binance_exchange.cpp
src/model/: opencl_engine.cpp
src/model/kernels/: options_pricing.cl  options_pricing.cu  portfolio_analysis.cl  portfolio_analysis.cu  technical_analysis.cl  technical_analysis.cu
tests/: CMakeLists.txt
tests/exchange/: base_exchange_test.cpp  binance_exchange_test.cpp
